--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,20 @@ android {
         }
     }
 }
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+        jcenter()
+    }
 
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.22.0'
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.1.13'
+    }
+}
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -26,6 +39,10 @@ dependencies {
     })
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.google.android.gms:play-services-auth:9.8.0'
+    compile('com.twitter.sdk.android:twitter:2.1.1@aar') {
+        transitive = true;
+    }
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.0.0'
 }
